--- a/style.css
+++ b/style.css
@@ -1,16 +1,13 @@
 html, body, canvas {
   margin: 0;
   padding: 0;
-}
-
-html{
   overflow: hidden;
   background-color: rgb(229, 229, 229);
 }
 
-body{
-  overflow: hidden;
-  background-color: rgb(229, 229, 229);
+canvas {
+  width: 100%;
+  height: 100%;
 }
 
 h1{
@@ -76,6 +73,7 @@ div.buttons:hover{
 
   .centerBox {
     width: 90vw;
+    top:70vh;
   }
 
   div.buttons{
