--- a/style.css
+++ b/style.css
@@ -15,12 +15,8 @@ h1{
   position: absolute;
   top:80vh;
   left:50%;
-  width: 100vw;
+  width: 100%;
   transform: translate(-50%, -50%);
-  background-color: hsla(0, 0%, 90%, 0.4);
-}
-
-.centerBox:hover{
   background: hsla(0, 0%, 66%, 0.4);
 }
 
@@ -32,12 +28,9 @@ h1{
   top:0px;
   left:50%;
   transform: translate(-50%, -0%);
-  
   width: 100%;
   height: auto;
-  
 }
-
 
 img.buttonimg{
     height: 100%;
@@ -45,10 +38,10 @@ img.buttonimg{
 }
 
 div.buttons{
-    margin: 20px;
+    margin: 10px;
     display: inline-block;
-    height: 100px;
-    width: 300px;
+    height: 65px;
+    width: auto;
     background: rgba(70,70,70,.6);
 }
 
@@ -67,20 +60,21 @@ div.buttons:hover{
 @media only screen and (max-aspect-ratio: 13/16) {
 
   .centerBox {
-    width: 90vw;
+    margin: 2vw;
     top:70vh;
+    width: auto;
   }
 
   div.buttons{
     height: auto;
-    width: 90%;
+    width: 100%;
     max-height: 70px;
   }
 
   img.buttonimg{
     height: 100%;
     width: auto;
-    max-height: 70px;
+    max-height: 65px;
   }
 }
 
