--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
 html, body, canvas {
+  background-color: #16161800;
+  color: white;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  background-color: rgb(229, 229, 229);
+  font-family: "Arial Nova";
+  font-weight: normal;
+  font-style: normal;
 }
 
+@font-face {
+  font-family: "Arial Nova";
+  src: url('fonts/ArialNova.ttf') format('truetype');
+}
 
 .centerBox {
   text-align: center;
-  position: absolute;
-  bottom: 10vh;
+  position: relative;
   left:50%;
   width: 100%;
   height: auto;
@@ -21,7 +27,7 @@ html, body, canvas {
   display: flex;
   pointer-events: none;
   user-select: none;
-  position: absolute;
+  position: fixed;
   top:0px;
   left:50%;
   transform: translate(-50%, -0%);
@@ -46,9 +52,14 @@ div.buttons:hover{
     background: rgba(15,193,183,.5);
 }
 
+.content-wrapper{
+  background: rgba(255, 255, 255, 0);
+}
+
 #bgimg {
   opacity: 1;
-  transition: opacity 4s; 
+  transition: opacity 5s;
+  z-index: -1;
 }
 
 #bgimg.fade {
@@ -85,6 +96,115 @@ div.description{
   text-shadow: 0px 0px 5px black; 
 }
 
+.spacer {
+  height: 80vh; 
+}
+
+.card {
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.9);
+  margin: 20px auto;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 90%;
+  max-width: 1100px;
+  flex-wrap: wrap;
+}
+
+.card-gallery {
+  width: 450px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-right: 20px;
+}
+
+.card-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-title {
+  font-size: 1.5rem;
+  margin: 0 0 10px;
+  color: #333;
+}
+
+.card-type {
+  font-size: 0.9rem;
+  margin: 0 0 10px;
+  color: #777;
+}
+
+.card-summary {
+  font-size: 1rem;
+  margin-bottom: 20px;
+  color: #555;
+  text-align: justify;
+}
+
+.card-button-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: auto;
+}
+
+.card-button {
+  margin-left: 10px;
+  padding: 2px;
+  height: 35px;
+  width: 35px;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 10px;
+  right: 10px;
+}
+
+.card-button:hover {
+  background-color: #eeeeee;
+}
+
+.footer {
+  left: 0;
+  bottom: 0;
+  height: 20px;
+  width: 100%;
+  background-color: hsla(0, 0%, 66%, 0.12);
+  color: white;
+  text-align: center; /* Aligns footer text */
+}
+
+.impressum-details {
+  display: flex; /* Enables flexbox */
+  justify-content: center; /* Centers the cyan box horizontally */
+  align-items: center; /* Centers the cyan box vertically */
+  padding: 20px; /* Optional, adds spacing around the cyan box */
+  height: auto; /* Adjust or set a specific height if required */
+  background-color: hsla(0, 0%, 66%, 0.12);
+}
+
+.impressum-toggle {
+  cursor: pointer;
+  color: white;
+}
+
+.impressum-text {
+  text-align: left;
+  width: 400px; 
+  padding: 0; 
+  margin: 0; 
+  display: block;
+}
+
+
 
 @media only screen and (max-aspect-ratio: 4/2.2) {
   /* adjust portait picture */
@@ -105,29 +225,24 @@ div.description{
   .centerBox {
     text-align: center;
     width: 75%;
-    position: absolute;
+    position: relative;
     bottom: 50px;
     left:50%;
     height: auto;
     transform: translate(-50%, 0%);
   }
 
-}
-
-/* Light mode */
-@media (prefers-color-scheme: light) {
-  html, body, canvas {
-      background-color: white;
-      color: black;
+  .card-gallery {
+    width: 100%;
+    margin-right: 0px;
   }
-}
-
-/* Dark mode */
-@media (prefers-color-scheme: dark) {
-  html, body, canvas {
-      background-color: #161618;
-      color: white;
+    
+  .spacer {
+    height: 65vh; 
   }
 
-  
+  .centerBox {
+    background: hsla(0, 0%, 100%, 0);
+  }
+
 }
