--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html, body, canvas {
   font-family: "Arial Nova";
   font-weight: normal;
   font-style: normal;
+  overflow: auto;
 }
 
 @font-face {
@@ -54,6 +55,7 @@ div.buttons:hover{
 
 .content-wrapper{
   background: rgba(255, 255, 255, 0);
+  overflow: auto;
 }
 
 #bgimg {
